<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.ProfileListFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/user_image"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/userImage"
                    android:src="@drawable/ic_baseline_account_circle_24" />


                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:outlineProvider="@color/purple_200"
                    app:cardCornerRadius="20dp">

                    <LinearLayout
                        android:layout_width="310dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingTop="30dp"
                        android:paddingBottom="30dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/text1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:height="50dp"
                                android:gravity="center"
                                android:text="@string/Name"
                                android:textColor="@color/black"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/user_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="20dp"
                                android:height="50dp"
                                android:gravity="center_vertical"
                                android:textColor="@color/black"
                                android:textSize="20sp"
                                tools:text="Moses" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/text2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:height="50dp"
                                android:gravity="center"
                                android:text="@string/followers"
                                android:textColor="@color/black"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/userFollowers"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="20dp"
                                android:height="50dp"
                                android:gravity="center_vertical"
                                android:textColor="@color/black"
                                android:textSize="20sp"
                                tools:text="2222" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/text3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:height="50dp"
                                android:gravity="center"
                                android:text="@string/following"
                                android:textColor="@color/black"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/user_following"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="20dp"
                                android:height="50dp"
                                android:gravity="center_vertical"
                                android:textColor="@color/black"
                                android:textSize="20sp"
                                tools:text="2222" />
                        </LinearLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>
        </ScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/favoriteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_add_circle_24"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/favourite"
        android:layout_margin="16dp" />
    </RelativeLayout>

</layout>